# palm-model

./: .gitattributes  README.md  VERSION  install  pyproject.toml  requirements.txt  src
docs/: config.yml  palmdocs  requirements.txt
docs/content/: Get_Started.md
docs/content/Guide/: index.md
docs/content/Reference/: index.md
docs/content/Tools/: .pages  kpp4palm  palm_csd
