[project]
name = "palm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argcomplete==3.1.3",
    "argparse==1.4.0",
    "f90nml==1.4.4",
    "jinja2<3.1.0",
    "matplotlib==3.7.5 ; python_full_version == '3.8.*'",
    "matplotlib==3.9.2 ; python_full_version >= '3.9'",
    "metpy==1.3.1",
    "mike==1.1.2",
    "mkdocs==1.2.3",
    "mkdocs-macros-plugin==0.6.3",
    "netcdf4==1.7.2",
    "numpy==1.24.3 ; python_full_version == '3.8.*'",
    "numpy==1.26.4 ; python_full_version >= '3.9'",
    "pandas==1.5.0",
    "parse==1.19.0",
    "pydantic==2.9.2",
    "pymdown-extensions==9.1",
    "pyproj==3.5.0 ; python_full_version == '3.8.*'",
    "pyproj==3.6.1 ; python_full_version == '3.9.*'",
    "pyproj==3.7.0 ; python_full_version >= '3.10'",
    "pyqt5==5.15.6",
    "pytest==7.2.0",
    "pyyaml==6.0.2",
    "rasterio==1.3.11",
    "scipy==1.10.1 ; python_full_version == '3.8.*'",
    "scipy==1.13.1 ; python_full_version == '3.9.*'",
    "scipy==1.14.1 ; python_full_version >= '3.10'",
    "setuptools==68.2.2",
    "termcolor==2.3.0",
    "tqdm==4.64.1",
    "utm==0.7.0",
    "verspec==0.1.0",
]

[dependency-groups]
dev = [
    "fortls>=3.2.2",
    "fprettify",
]

[tool.uv.sources]
fprettify = { git = "https://github.com/Syize/fprettify" }
